--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/style.css" />
 
     <script src="../js/product.js" type="module"></script>
+    <script type="module" src="../js/main.js"></script>
   </head>
 
   <body>
@@ -55,35 +56,10 @@
     </header>
 
     <main class="divider">
-      <section class="product-detail">
-        <h3>Marmot</h3>
+      <ul id="product-list" class="products-grid">
+      <!-- Product cards will be injected here by renderList() -->
+      </ul>
 
-        <h2 class="divider">Ajax Tent - 3-Person, 3-Season</h2>
-
-        <img
-          class="divider"
-          src="../images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
-          alt="Marmot Ajax tent"
-        />
-
-        <p class="product-card__price">$199.99</p>
-
-        <p class="product__color">Pale Pumpkin/Terracotta</p>
-
-        <p class="product__description">
-          Get out and enjoy nature with Marmot&#39;s Ajax tent, featuring a
-          smart design with durable, waterproof construction and two doors for
-          easy access.
-        </p>
-        
-        <li>
-  <a href="product_pages/?product=880RR">Marmot Ajax 3</a>
-</li>
-
-        <div class="product-detail__add">
-          <button id="addToCart" data-id="880RR">Add to Cart</button>
-        </div>
-      </section>
     </main>
 
     <footer>&copy;NOT a real business</footer>
