Add cart total calculation and footer display in cart page

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -91,6 +91,11 @@
           </li> -->
         </ul>
       </section>
+      <section class="cart__summary">
+        <div class="cart-footer hide">
+          <p class="cart__total">Total:</p>
+        </div>
+      </section>
     </main>
 
     <footer>&copy;NOT a real business</footer>
