--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -10,10 +10,14 @@
 
     <link rel="stylesheet" href="/css/style.css" />
 
-    <script src="../js/cart.js" type="module"></script>
+    <script type="module" src="../js/cart.js" type="module"></script>
   </head>
 
   <body>
+
+  <!-- Alert container -->
+  <div id="alert-container"></div>
+
     <header class="divider">
       <div class="logo">
         <img src="/images/noun_Tent_2517.svg" alt="tent image for logo" />
