--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -65,6 +65,8 @@
         <div class="product-detail__add">
           <button id="addToCart" data-id="productId">Add to Cart</button>
         </div>
+        <div id="alert-container"></div>
+
       </section>
     </main>
 
