--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -8,6 +8,8 @@
 
     <title>Sleep Outside | Checkout</title>
 
+    <script type="module" src="../js/checkout.js"></script>
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
