--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -10,12 +10,11 @@
 
     <link rel="stylesheet" href="/css/style.css" />
 
-    <script type="module" src="../js/cart.js" type="module"></script>
+    <script src="../js/cart.js" type="module"></script>
   </head>
 
   <body>
-    <header class="divider" id="main-header">
-    </header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="products">
@@ -61,7 +60,6 @@
       </section>
     </main>
 
-    <footer id="main-footer">
-    </footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
