Update category links in index.html and improve product detail rendering in ProductDetails.mjs

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <h2>Product Categories</h2>
         <ul class="category-list">
           <li class="category-card">
-            <a href="product_listing/index.html/?categories=tents">
+            <a href="./product_listing/index.html?category=tents">
               <img
                 src="./public/images/categories/category-tents.svg"
                 alt="Tent icon"
@@ -43,7 +43,7 @@
             </a>
           </li>
           <li class="category-card">
-            <a href="product_listing/index.html/?categories=backpacks">
+            <a href="product_listing/index.html?category=backpacks">
               <img
                 src="./public/images/categories/category-backpacks.svg"
                 alt="Backpack icon"
@@ -53,7 +53,7 @@
             </a>
           </li>
           <li class="category-card">
-            <a href="product_listing/index.html/?categories=sleeping-bags">
+            <a href="./product_listing/index.html?category=sleeping-bags">
               <img
                 src="./public/images/categories/category-sleepingbags.svg"
                 alt="Sleeping Bag icon"
@@ -63,7 +63,7 @@
             </a>
           </li>
           <li class="category-card">
-            <a href="product_listing/index.html/?categories=hammocks">
+            <a href="./product_listing/index.html?category=hammocks">
               <img
                 src="./public/images/categories/category-hammocks.svg"
                 alt="Hammock icon"
