--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sleep Outside | Product Make and Name</title>
+    <title>Sleep Outside | Product Details</title>
     <link rel="stylesheet" href="../css/style.css" />
-    <script src="../js/product.js" type="module"></script>
+    <script src="../js/Product.js" type="module"></script>
   </head>
 
   <body>
-    <header class="divider" id="main-header">
-    </header>
+    <header class="divider" id="main-header"></header>
 
     <main class="divider">
       <section class="product-detail">
-        <h2>Brand Name</h2>
+        <h2>Product Details</h2>
         <h3 class="divider">Product</h3>
         <img
           src="../images/camping-products.jpg"
@@ -29,11 +28,9 @@
           <button id="addToCart" data-id="productId">Add to Cart</button>
         </div>
         <div id="alert-container"></div>
-
       </section>
     </main>
 
-    <footer id="main-footer">
-    </footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
