--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -14,13 +14,9 @@
     <main class="divider">
       <section class="product-detail">
         <h2>Product Details</h2>
-        <h3 class="divider">Product</h3>
-        <img
-          src="../images/camping-products.jpg"
-          alt="Sleep Outside Camping Products"
-          id="productImage"
-          class="divider"
-        />
+        <h3 class="divider" id="productName">Product</h3>
+        <p id="productBrand" class="product__brand">Brand</p>
+        <img src="" alt="" id="productImage" class="divider" />
         <p id="productPrice" class="product-card__price">$000.99</p>
         <p id="productColor" class="product__color">Color</p>
         <p id="productDesc" class="product__description">Description</p>
