Enhance product detail layout and styling; adjust margins and update title structure

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -13,9 +13,9 @@
 
     <main class="divider">
       <section class="product-detail">
-        <h2>Product Details</h2>
+        <h2 class="divider">Product Details</h2>
+        <h3 id="productName">Product</h3>
         <p id="productBrand" class="product__brand">Brand</p>
-        <h3 class="divider" id="productName">Product</h3>
         <img src="" alt="" id="productImage" class="divider" width="300" />
         <p id="productPrice" class="product-card__price">$000.99</p>
         <p id="productColor" class="product__color">Color</p>
