--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -58,6 +58,15 @@
           <p class="cart__total">Total:</p>
         </div>
       </section>
+      <section class="checkout-section">
+        <div class="checkout">
+          <h2>Checkout</h2>
+          <p>Complete your purchase</p>
+          <a href="../checkout/index.html" class="checkout-btn btn"
+            >Proceed to Checkout</a
+          >
+        </div>
+      </section>
     </main>
 
     <footer id="main-footer"></footer>
