Refactor checkout section in index.html and enhance styling in style.css

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -60,9 +60,8 @@
       </section>
       <section class="checkout-section">
         <div class="checkout">
-          <h2>Checkout</h2>
-          <p>Complete your purchase</p>
-          <a href="../checkout/index.html" class="checkout-btn btn"
+          <h2>Complete your purchase</h2>
+          <a href="../checkout/index.html" class="checkout-btn"
             >Proceed to Checkout</a
           >
         </div>
