--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -6,20 +6,130 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sleep Outside | Checkout</title>
+    <title>Sleep Outside | Cart</title>
 
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
-    <script src="../js/checkout.js" type="module"></script>
+    <script src="../js/checkoutProcess.mjs" type="module"></script>
   </head>
 
   <body>
     <header class="divider" id="main-header"></header>
 
     <main class="divider">
-      <section class="products">
-        <h3>Review & Place your Order</h3>
-      </section>
+      <div class="checkout-container">
+        <!-- Order Summary -->
+        <section class="order-summary">
+          <h2>Order Summary</h2>
+          <div class="summary-item">
+            <span>Subtotal:</span>
+            <span id="subtotal">$0.00</span>
+          </div>
+          <div class="summary-item">
+            <span>Tax(6%):</span>
+            <span id="tax">$0.00</span>
+          </div>
+          <div class="summary-item">
+            <span>Shipping:</span>
+            <span id="shipping">$0.00</span>
+          </div>
+          <div class="summary-item total">
+            <span>Order Total:</span>
+            <span id="order-total">$0.00</span>
+          </div>
+        </section>
+
+        <!-- Checkout Form -->
+        <section class="checkout-section">
+          <h2>Checkout</h2>
+          <form id="checkout-form" novalidate>
+            <!-- Customer Information -->
+            <fieldset>
+              <legend>Customer Information</legend>
+              <div class="form-group">
+                <label for="first-name">First Name *</label>
+                <input type="text" id="first-name" name="firstName" required />
+              </div>
+              <div class="form-group">
+                <label for="last-name">Last Name *</label>
+                <input type="text" id="last-name" name="lastName" required />
+              </div>
+            </fieldset>
+
+            <!-- Address Information -->
+            <fieldset>
+              <legend>Billing & Shipping Address</legend>
+              <div class="form-group">
+                <label for="street-address">Street Address *</label>
+                <input
+                  type="text"
+                  id="street-address"
+                  name="streetAddress"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="city">City *</label>
+                <input type="text" id="city" name="city" required />
+              </div>
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="state">State *</label>
+                  <input type="text" id="state" name="state" required />
+                </div>
+                <div class="form-group">
+                  <label for="zip-code">Zip Code *</label>
+                  <input
+                    type="text"
+                    id="zip-code"
+                    name="zipCode"
+                    required
+                    pattern="[0-9]{5}(-[0-9]{4})?"
+                    title="Please enter a valid ZIP code (12345 or 12345-6789)"
+                  />
+                </div>
+              </div>
+            </fieldset>
+
+            <!-- Payment Information -->
+            <fieldset>
+              <legend>Payment Information</legend>
+              <div class="form-group">
+                <label for="card-number">Credit Card Number *</label>
+                <input
+                  type="text"
+                  id="card-number"
+                  name="cardNumber"
+                  required
+                  pattern="[0-9\s]{13,19}"
+                  maxlength="19"
+                  title="Please enter a valid credit card number"
+                />
+              </div>
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="expiry-date">Expiration Date *</label>
+                  <input type="month" id="expiry-date" name="expiryDate" />
+                </div>
+                <div class="form-group">
+                  <label for="security-code">Security Code *</label>
+                  <input
+                    type="text"
+                    id="security-code"
+                    name="securityCode"
+                    required
+                    pattern="[0-9]{3,4}"
+                    maxlength="4"
+                    title="Please enter a valid security code (3 or 4 digits)"
+                  />
+                </div>
+              </div>
+            </fieldset>
+
+            <button type="submit" class="checkout-btn">Complete Order</button>
+          </form>
+        </section>
+      </div>
     </main>
 
     <footer id="main-footer"></footer>
