Update input names in checkout form for consistency: change 'firstName' to 'fname', 'lastName' to 'lname', 'expiryDate' to 'expiration', and 'securityCode' to 'code'

--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -48,11 +48,11 @@
               <legend>Customer Information</legend>
               <div class="form-group">
                 <label for="first-name">First Name *</label>
-                <input type="text" id="first-name" name="firstName" required />
+                <input type="text" id="first-name" name="fname" required />
               </div>
               <div class="form-group">
                 <label for="last-name">Last Name *</label>
-                <input type="text" id="last-name" name="lastName" required />
+                <input type="text" id="last-name" name="lname" required />
               </div>
             </fieldset>
 
@@ -109,14 +109,14 @@
               <div class="form-row">
                 <div class="form-group">
                   <label for="expiry-date">Expiration Date *</label>
-                  <input type="month" id="expiry-date" name="expiryDate" />
+                  <input type="month" id="expiry-date" name="expiration" />
                 </div>
                 <div class="form-group">
                   <label for="security-code">Security Code *</label>
                   <input
                     type="text"
                     id="security-code"
-                    name="securityCode"
+                    name="code"
                     required
                     pattern="[0-9]{3,4}"
                     maxlength="4"
