--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="/css/style.css" />
 
-    <script src="../js/checkoutProcess.mjs" type="module"></script>
+    <script src="../js/checkout.js" type="module"></script>
   </head>
 
   <body>
@@ -42,7 +42,7 @@
         <!-- Checkout Form -->
         <section class="checkout-section">
           <h2>Checkout</h2>
-          <form id="checkout-form" novalidate>
+          <form id="checkout-form" name="checkout-form">
             <!-- Customer Information -->
             <fieldset>
               <legend>Customer Information</legend>
@@ -61,12 +61,7 @@
               <legend>Billing & Shipping Address</legend>
               <div class="form-group">
                 <label for="street-address">Street Address *</label>
-                <input
-                  type="text"
-                  id="street-address"
-                  name="streetAddress"
-                  required
-                />
+                <input type="text" id="street-address" name="street" required />
               </div>
               <div class="form-group">
                 <label for="city">City *</label>
@@ -82,7 +77,7 @@
                   <input
                     type="text"
                     id="zip-code"
-                    name="zipCode"
+                    name="zip"
                     required
                     pattern="[0-9]{5}(-[0-9]{4})?"
                     title="Please enter a valid ZIP code (12345 or 12345-6789)"
@@ -104,12 +99,23 @@
                   pattern="[0-9\s]{13,19}"
                   maxlength="19"
                   title="Please enter a valid credit card number"
+                  value="1234123412341234"
                 />
               </div>
               <div class="form-row">
                 <div class="form-group">
-                  <label for="expiry-date">Expiration Date *</label>
-                  <input type="month" id="expiry-date" name="expiration" />
+                  <label for="expiry-date">Expiration Date (MM/YY) *</label>
+                  <input
+                    type="text"
+                    id="expiry-date"
+                    name="expiration"
+                    required
+                    placeholder="MM/YY"
+                    pattern="(0[1-9]|1[0-2])\/([0-9]{2})"
+                    maxlength="5"
+                    title="Please enter expiration date in MM/YY format (e.g., 12/27)"
+                    value="12/27"
+                  />
                 </div>
                 <div class="form-group">
                   <label for="security-code">Security Code *</label>
@@ -121,6 +127,7 @@
                     pattern="[0-9]{3,4}"
                     maxlength="4"
                     title="Please enter a valid security code (3 or 4 digits)"
+                    value="123"
                   />
                 </div>
               </div>
