Add custom alert message functionality and form validation improvements

--- a/src/checkout/success.html
+++ b/src/checkout/success.html
@@ -63,12 +63,8 @@
         </div> -->
 
         <div class="action-buttons">
-          <a href="../index.html" class="button">Continue Shopping</a>
-          <a
-            href="../product_listing/index.html"
-            class="button secondary"
-            >Shop More</a
-          >
+          <a href="../index.html" class="button">Go To Homepage</a>
+          <a href="../product_listing/index.html" class="button secondary">Shop More</a>
         </div>
       </section>
     </main>
