--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -42,7 +42,7 @@
         <!-- Checkout Form -->
         <section class="checkout-section">
           <h2>Checkout</h2>
-          <form id="checkout-form" name="checkout-form">
+          <form id="checkout-form" name="checkout-form" novalidate>
             <!-- Customer Information -->
             <fieldset>
               <legend>Customer Information</legend>
